# wispr-clone

./: .gitignore  BUILD_PROMPT.md  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: e2e_mvp_test.py  install-launch-agent.sh  spike_paste.py  spike_transcribe.py
src/wispr_clone/: __init__.py  app.py  audio.py  cleanup.py  config.py  context.py  hotkey.py  inject.py  permissions.py  pipeline.py  tray.py  vocabulary.py
src/wispr_clone/asr/: __init__.py  base.py  parakeet.py  whisper.py
tests/: test_asr.py  test_cleanup.py  test_config.py  test_hotkey.py  test_pipeline.py  test_vocabulary.py
