[project]
name = "wispr-clone"
version = "0.1.0"
description = "A free, local, private, hotkey voice-dictation app for macOS - an offline Wispr Flow alternative."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ben Tindal" }]
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    # Not a direct import: guides the resolver away from ancient numba/llvmlite
    # (pulled transitively via parakeet-mlx -> librosa) that can't build on 3.11+.
    "numba>=0.59 ; platform_machine == 'arm64' and sys_platform == 'darwin'",
    "silero-vad>=5.1",
    "parakeet-mlx>=0.3 ; platform_machine == 'arm64' and sys_platform == 'darwin'",
    "faster-whisper>=1.0",
    "rapidfuzz>=3.6",
    "jellyfish>=1.0",
    "pynput>=1.7.6",
    "rumps>=0.4.0 ; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.0 ; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0 ; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=10.0 ; sys_platform == 'darwin'",
    "pyobjc-framework-AVFoundation>=10.0 ; sys_platform == 'darwin'",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[project.scripts]
wispr-clone = "wispr_clone.app:main"
wispr-vocab = "wispr_clone.vocabulary:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wispr_clone"]

[tool.pytest.ini_options]
testpaths = ["tests"]
